# CrawlerDownload

./: README.md  config.json  pyproject.toml  requirements.txt
src/: CrawlerDownload.py  __init__.py  main.py
src/Util/: AES_js.py  ProgressBar.py  py_wget.py
src/config/: download.py  download_config.py
src/download/: down_bilibili.py  down_m3u8.py  down_twitch.py  down_youtube.py
src/download/Util/: __init__.py  mException.py  py_wget.py
tests/: test.py
